--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ Statistics = "1"
 StatsBase = "0"
 Tables = "1"
 UnicodePlots = "3"
+WGLMakie = "0.9"
 julia = "1.7, 1.8, 1.9, 1.10, 1.11"
 
 [extras]
