CompatHelper: add new compat entry for FunctionWrappers at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ DataInterpolations = "4"
 DataStructures = "0.18"
 FFTA = "0.2"
 ForwardDiff = "0.10"
+FunctionWrappers = "1"
 IterTools = "1"
 Memoization = "0.2"
 Optim = "1"
