--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ SpecialFunctions = "1, 2"
 Statistics = "1"
 StatsBase = "0"
 Tables = "1"
+TestItems = "0.1"
 UnicodePlots = "3"
 julia = "1.7, 1.8, 1.9, 1.10, 1.11"
 
