CompatHelper: add new compat entry for MakieCore at version 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ DataStructures = "0.18"
 FFTA = "0.2"
 ForwardDiff = "0.10"
 IterTools = "1"
+MakieCore = "0.8"
 Memoization = "0.2"
 Optim = "1"
 OrdinaryDiffEq = "5, 6"
