CompatHelper: add new compat entry for Makie at version 0.21, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ DataStructures = "0.18"
 FFTA = "0.2"
 ForwardDiff = "0.10"
 IterTools = "1"
+Makie = "0.21"
 Memoization = "0.2"
 Optim = "1"
 OrdinaryDiffEq = "5, 6"
